@@ -2,7 +2,9 @@
 
 cmake_minimum_required(VERSION 2.6)
 
-ADD_SUBDIRECTORY(src)
+SET ( LIBNOISE_VERSION "1.0.0" )
 
-#ADD_SUBDIRECTORY(doc)
+# ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(doc)
+
 #ADD_SUBDIRECTORY(samples)
